# clm

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CODING_STYLE.md  LICENSE  README.md  banned.h  guide.md  meson.build  meson.options
.gitea/workflows/: ci.yml
cross/: x86_64-linux-musl  x86_64-linux-musl-debian
docs/: clm-config.md  clm-tool.md  clm.md  clm_agent.md  lua-api.md
esp32/: README.md  partitions.csv  platformio.ini  sdkconfig.cardputer  sdkconfig.cardputer.defaults  sdkconfig.defaults  sdkconfig.t-deck
esp32/boards/: cardputer.json  t-deck.json
esp32/components/libclm/: CMakeLists.txt
esp32/components/libclm/shim/: clm_compat.h  clm_host_esp32.h
esp32/components/libclm/shim/cjson/: cJSON.h
esp32/components/libclm/src/: clm_host_esp32.c  compat_esp32.c
esp32/components/synth_vfs/: synth_vfs.c  synth_vfs.h
esp32/firmware/: .gitignore  CMakeLists.txt  board.h  board_cardputer.c  board_config.h  board_tdeck.c  clm_config.h.example  display.c  display.h  font8x16.h  main.c  root_vfs.c  root_vfs.h
esp32/firmware/fonts/: bdf2font.py
fuzz/: fuzz_md.c  fuzz_props.c  fuzz_session.c  fuzz_tmpl.c  fuzz_tool_dispatch.c  meson.build
fuzz/corpus/session/: meta  toolcall  toolresult  user
include/: useful.h
include/clm/: agent.h  cleanup.h  clm.h  clm_export.h  compress.h  history.h  host.h  host_uv.h  http.h  http_async.h  internal.h  llm.h  log.h  lua_plugin.h  mcp.h  provider.h  ratelimit.h  session.h  tools.h  version.h.in  version.h.in.bak
lib/: agent.c  history.c  host_uv.c  http.c  http_async.c  libclm.map  llm.c  log.c  lua_http.c  lua_json.c  lua_plugin.c  mcp_client.c  meson.build  models_list.c  props.c  provider.c  provider_anthropic.c  provider_openai.c  tool_bg.c  tool_shell.c  tools.c
libclm/: agent.c  history.c  llm.c  log.c  meson.build  models_list.c  props.c  provider.c  provider_anthropic.c  provider_openai.c  provider_responses.c  ratelimit.c  tools.c
libclmlua/: lua_agent.c  lua_http.c  lua_internal.h  lua_json.c  lua_plugin.c  meson.build
libclmsession/: meson.build  session.c  session_internal.h
libclmuv/: host_uv.c  http_async.c  http_response_buffer.c  http_response_buffer.h  mcp_client.c  meson.build  tool_bg.c  tool_shell.c
libemoji/: emoji.c  emoji.h  emoji_data.tsv  gen_emoji.lua  meson.build
man/: check-docs.sh  clm-config.5  clm-tool.5  clm.1  clm_agent.3  docs-sync.sh  meson.build  template.1  tmpl_new.3  tmpl_parse.3
plugins/: edit_file.lua  reverse.lua  tasks.lua  weather.lua  web_search.lua
src/: complete.c  complete.h  config.lua.tpl  frontend.h  gen_seed_plugins.lua  gen_templates.lua  main.c  mcp_setup.c  mcp_setup.h  md_render.c  md_render.h  meson.build  model_spec.h  secrets.lua.tpl  seed_plugins.c  seed_plugins.h  templates.h  tui.c  tui_internal.h  xdg.c  xdg.h
subprojects/: curl.wrap  md4c.wrap
subprojects/packagefiles/curl/: meson.build
subprojects/packagefiles/md4c/: meson.build
test/: canned.c  canned.h  meson.build  test_agent.c  test_http_async.c  test_http_response_buffer.c  test_lua_agent.c  test_lua_plugin.c  test_mcp.c  test_mcp_client.c  test_mcp_ready.c  test_md.c  test_session.c  test_tmpl.c
test/config/clm/: config.lua
test/config/clm/agents/: test.lua
test/plugins/: fail_explicit.lua  fail_indirect.lua  http_inline.lua  loop_at_load.lua  sandbox_ok.lua
test/plugins_after_yield/: loop_after_yield.lua
test/plugins_agent/: spawn_test.lua
test/plugins_concurrency/: concurrent.lua
test/plugins_teardown/: pending.lua
test/tui/: driver.py  mock_server.py  test_tui.py
